# Shop_Bot

./: .gitignore  README.md  requirements.txt
backend/model/: rag_model.py  retriever.py
backend/vector_store/: index.pkl
bot/logs/: log.txt
bot/src/: config.py  rag_model.py  retriever.py  utils.py
bot/vector_store/: index.faiss
configs/: backend_config.py  server_config.py
database/: products.json  shop_products.json
frontend/static/: bag.js  script.js  style.css  wishlist.js
frontend/static/imgs/berries/: blackberry_v2.avif
frontend/static/imgs/fruit/: fruits.avif
frontend/static/imgs/meet/: beef.avif  goose.avif
frontend/static/imgs/other/: aroma.avif
frontend/templates/: bag.html  berries.html  fruits.html  index.html  meat.html  other.html  search.html  vegetables.html  wishlist.html
install/: key  pyproject.toml
logs/: log.txt
server/: server.py
server/static/: script.js  style.css
server/templates/: index.html
